--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.10",
+    "@mui/x-data-grid": "^5.17.8",
     "@prisma/client": "4.5.0",
     "next": "12.3.1",
     "prisma": "^4.5.0",
