--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "12.3.1",
     "prisma": "^4.5.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-flow-renderer": "^9.7.4"
   },
   "devDependencies": {
     "eslint": "8.25.0",
